--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,13 @@
-.App {
-  text-align: center;
-}
+/*ГЛОБАЛЬНЫЙ ГРИД*/
+.app-wrapper {
+  display: grid;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+  grid-template-areas: 
+  "header"
+  "nav"
+  "cont";/*разметка 3-х строк в глобальном гриде по grid-area ниже*/
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  grid-template-rows: 60px 60px 1fr;/*3 строки, 60пкс 60пкс и остальное*/
+  grid-template-columns: 1fr;/*1 колонка*/
+  /*grid-gap: 10px;*/
 }
