--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&display=swap');
+
+body {
+  background-color: #f4f4f4;
+  font-family: Oswald;
+}
+
 /*ГЛОБАЛЬНЫЙ ГРИД*/
 .app-wrapper {
+  background-color: #f4f4f4;
   display: grid;
 
   grid-template-areas: 
@@ -7,12 +15,14 @@
   "nav"
   "cont";/*разметка 3-х строк в глобальном гриде по grid-area ниже*/
 
-  grid-template-rows: 60px 60px 1fr;/*3 строки, 60пкс 60пкс и остальное*/
+  grid-template-rows: 80px 40px 1fr;/*3 строки, 60пкс 60пкс и остальное*/
   grid-template-columns: 1fr;/*1 колонка*/
   /*grid-gap: 10px;*/
+
 }
 
 .app-wrapper-content {
+  margin: 0 20% 0;
   grid-area: cont;
   border: dashed black;
 }
