--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,4 +1,18 @@
 .header {
     grid-area: header;
-    border: dashed black;
-  }
+
+    margin-top: 10px;
+    background-color: white;
+    border: 2px solid #a5a5a5;
+    border-left: none;
+    border-right: none;
+
+    display: flex;
+    align-items: center;
+}
+
+.name {
+    margin-left:20%;
+    font-weight: 800;
+    font-size: 18pt;
+}
