--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,42 +1,17 @@
 .nav {
-    grid-area: nav;
-    border: dashed black;
+    margin: 0 20% 0;
+    align-self: center;
+}
+
+.message {
+  margin-left: 1%; 
+}  
   
-    display: grid;
-  
-    grid-template-areas: 
-    "profile message music settings";/*разметка 4-х столбов в nav гриде по grid-area ниже*/
-  
-    grid-template-rows: 1fr;/*3 строки, 60пкс 20пкс и остальное*/
-    grid-template-columns: 1fr 1fr 1fr 1fr;/*4 равных колонки*/
-    /*grid-gap: 10px;*/
-  }
-  
-a {
-  color:black;
+.nav a {
+  color:rgb(145, 145, 145);
   text-decoration: none;
 }
 
-.active {
-  color:gold;
-}
-
-.nav .profile {
-  grid-area: profile;
-  border: dashed black;
-}
-
-.nav .message {
-  grid-area: message;
-  border: dashed black;
-}
-
-.nav .music {
-  grid-area: music;
-  border: dashed black;
-}
-
-.nav .settings {
-  grid-area: settings;
-  border: dashed black;
+.nav a.active {
+  color:black;
 }
