--- a/src/components/MainPage/Profile/Profile.module.css
+++ b/src/components/MainPage/Profile/Profile.module.css
@@ -1,4 +1,32 @@
 .profile {
     grid-area: profile;
-    border: dashed black;
+    /* border: dashed black; */
+
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 1px 1px 2px rgb(194, 194, 194);
+    display: flex;
+    align-items: center;
   }
+
+.content {
+    display: flex;
+    align-items: center;
+    margin-left: 2%;
+    /* border: dashed black; */
+}
+
+.photo {
+  width: 70px;
+  border-radius: 40px;
+}
+
+.profileInfo {
+  font-size: 11pt;
+  margin-left: 3%;
+}
+
+.item {
+  margin: 0;
+  width: 300px;
+}
