--- a/src/components/MainPage/Post/Post.module.css
+++ b/src/components/MainPage/Post/Post.module.css
@@ -1,15 +1,17 @@
 .posts {
     grid-area: posts;
-    /* border: dashed black; */
+    border: dashed black;
 }
 
 .container {
     background-color: white;
     border-radius: 10px;
     box-shadow: 1px 1px 2px rgb(194, 194, 194);
-    height: 100px;
+    /* height: 70px; */
+    margin-top: 1%;
 }
 
 .text {
     margin-left: 2%;
+    /* border: dashed black; */
 }
